weird image bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,16 @@ body {
   }
 }
 
+@keyframes test {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(0deg);
+  }
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -54,14 +64,17 @@ svg {
 
 #html {
   filter: invert(36%) sepia(66%) saturate(1638%) hue-rotate(346deg) brightness(92%) contrast(92%);
+  animation: test infinite 20s linear;
 }
 
 #node {
   filter: invert(23%) sepia(39%) saturate(760%) hue-rotate(86deg) brightness(99%) contrast(86%);
+  animation: test infinite 20s linear;
 }
 
 #mongo {
   filter: invert(51%) sepia(28%) saturate(898%) hue-rotate(55deg) brightness(94%) contrast(91%);
+  animation: test infinite 20s linear;
 }
 
 #react {
@@ -77,34 +90,42 @@ svg {
 
 #firebase {
   filter: invert(62%) sepia(19%) saturate(4963%) hue-rotate(1deg) brightness(100%) contrast(103%);
+  animation: test infinite 20s linear;
 }
 
 #js {
   filter: invert(83%) sepia(92%) saturate(7267%) hue-rotate(338deg) brightness(101%) contrast(94%);
+  animation: test infinite 20s linear;
 }
 
 #jquery {
   filter: invert(22%) sepia(98%) saturate(5891%) hue-rotate(193deg) brightness(93%) contrast(94%);
+  animation: test infinite 20s linear;
 }
 
 #mysql {
   filter: invert(22%) sepia(66%) saturate(2991%) hue-rotate(172deg) brightness(98%) contrast(101%);
+  animation: test infinite 20s linear;
 }
 
 #python {
   filter: invert(42%) sepia(0%) saturate(1972%) hue-rotate(168deg) brightness(87%) contrast(80%);
+  animation: test infinite 20s linear;
 }
 
 #django {
   filter: invert(12%) sepia(24%) saturate(1270%) hue-rotate(106deg) brightness(102%) contrast(96%);
+  animation: test infinite 20s linear;
 }
 
 #git {
   filter: invert(0%) sepia(1%) saturate(4159%) hue-rotate(325deg) brightness(104%) contrast(60%);
+  animation: test infinite 20s linear;
 }
 
 #css {
   filter: invert(24%) sepia(90%) saturate(2241%) hue-rotate(223deg) brightness(88%) contrast(103%);
+  animation: test infinite 20s linear;
 }
 
 .hvr-grow {
